examples/datalog/14_aggregations/01_count.dl.out
Executing script: examples/datalog/14_aggregations/01_count.dl

> .db create test_agg_count
Database 'test_agg_count' created.
Switched to database: test_agg_count
> .db use test_agg_count
Switched to database: test_agg_count
> +sales[(1, 100), (1, 200), (1, 150), (2, 300), (2, 250), (3, 500)].
Inserted 6 facts into 'sales'.
> +sales_count(Region, count<Amount>) :- sales(Region, Amount).
Script error: Line 12: Parse error: Invalid term: 'count<Amount>'
