examples/datalog/14_aggregations/01_count.dl
// Test: Count Aggregation
// Category: 14_aggregations
// Description: Tests count aggregation to count tuples per group

.db create test_agg_count
.db use test_agg_count

// Insert sales data: sales(region_id, amount)
+sales[(1, 100), (1, 200), (1, 150), (2, 300), (2, 250), (3, 500)].

// Count sales per region
+sales_count(Region, count<Amount>) :- sales(Region, Amount).

// Query the count result
?- sales_count(X, Y).

// Cleanup
.db use default
.db drop test_agg_count
